Styling: Added media query to display flash messages correctly on mobile devices.

--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -261,3 +261,10 @@ body {
   float: left;
   margin: 0 10px;
 }
+
+@media (max-width: 480px) {
+  #messages {
+    width: 150px;
+    font-size: 10px;
+  }
+}
